--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8B5341</color>
+    <color name="colorPrimary">#0094E3</color>
     <color name="colorPrimaryDark">#0094E3</color>
-    <color name="colorAccent">#FFF2D7</color>
+    <color name="colorAccent">#0094E3</color>
 
     <!-- Theme Colors -->
     <color name="yellow">#FFF2D7</color>
@@ -10,8 +10,11 @@
     <color name="brown">#8B5341</color>
     <color name="green">#91C800</color>
     <color name="blue">#0094E3</color>
-    <color name="black">#4D4D4D</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#6A6A6A</color>
+    <color name="light_gray">#EAEAEA</color>
+    <color name="light_blue">#E2EEFF</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
